--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
@@ -7,19 +7,19 @@
       <form>
         <div class="form-group">
           <label class="h4">Name</label>
-          <input type="text" class="form-control" name="name" [(ngModel)]="editUser.name" />
+          <input type="text" class="form-control" name="name" [(ngModel)]="editUser.Name" />
         </div>
         <div class="form-group">
           <label class="h4">Email</label>
-          <input type="email" class="form-control" name="email" [(ngModel)]="editUser.email" disabled />
+          <input type="email" class="form-control" name="email" [(ngModel)]="editUser.Email" disabled />
         </div>
         <div class="form-group">
           <label class="h4">Contact Number</label>
-          <input type="text" class="form-control" name="phonenumber" [(ngModel)]="editUser.phoneNumber" />
+          <input type="text" class="form-control" name="phonenumber" [(ngModel)]="editUser.PhoneNumber" />
         </div>
         <div class="form-group">
           <label class="h4">Organization</label>
-          <input type="text" class="form-control" name="organizationname" [(ngModel)]="editUser.organizationName" />
+          <input type="text" class="form-control" name="organizationname" [(ngModel)]="editUser.OrganizationName" />
         </div>
         <div class="actions-area">
           <button type="button" class="btn">Cancel</button>
