--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -12,8 +12,8 @@
             <div class="form-fields">
                 <div class="form-group">
                     <label>Section</label>
-                    <select class="form-control width-percent-60" id="categorySelect" (change)="selectCategory($event.target.value)" ngModel required name="categorySelect" #categorySelect="ngModel">
-                        <option [disabled]="categorySelect.dirty" selected value="">Please select a category</option>
+                    <select class="form-control width-percent-60" id="categorySelect" (change)="selectCategory($event.target.value)" [(ngModel)]="selectedCategory" required name="categorySelect" #categorySelect="ngModel">
+                        <option [disabled]="categorySelect.dirty" default>Please select a category</option>
                         <option *ngFor="let category of categoryList">{{category.categoryName}}</option>
                     </select>
                     <div class="errors-container">
@@ -26,8 +26,8 @@
                 </div>
                 <div class="form-group">
                     <label>Difficulty Level</label>
-                    <select class="form-control small-width" name="difficulty" (change)="selectDifficulty($event.target.value)">
-                        <option selected>Easy</option>
+                    <select class="form-control small-width" name="difficulty" [(ngModel)]="selectedDifficulty" (change)="selectDifficulty($event.target.value)">
+                        <option default>Easy</option>
                         <option>Medium</option>
                         <option>Hard</option>
                     </select>
