--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -90,7 +90,7 @@
                             <div class="collapsible-body">
                                 <div class="form-group">
                                     <label>Test Case Title</label>
-                                    <input type="text" [(ngModel)]="testCase.testCaseTitle" class="form-control width-percent-60" required name="title_{{i}}" #title="ngModel"/>
+                                    <input type="text" [(ngModel)]="testCase.testCaseTitle" class="form-control width-percent-60" required name="title_{{testCase.id}}" #title="ngModel" />
                                     <div class="errors-container">
                                         <div *ngIf="title.errors && (title.dirty || title.touched)">
                                             <p class="text-danger">Test Case Title is required</p>
@@ -99,7 +99,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Description</label>
-                                    <textarea  [(ngModel)]="testCase.testCaseDescription" class="form-control width-percent-60" rows="3" required name="description_{{i}}" #description="ngModel"></textarea>
+                                    <textarea [(ngModel)]="testCase.testCaseDescription" class="form-control width-percent-60" rows="3" required name="description_{{testCase.id}}" #description="ngModel"></textarea>
                                     <div class="errors-container">
                                         <div *ngIf="description.errors && (description.dirty || description.touched)">
                                             <p class="text-danger">Test Case Description is required</p>
@@ -108,7 +108,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Type</label>
-                                    <select class="form-control width-percent-60" (change)="testCase.testCaseType=$event.target.value"  ngModel required name="type_{{i}}" #type="ngModel">
+                                    <select class="form-control width-percent-60" (change)="testCase.testCaseType=$event.target.value" ngModel required name="type_{{testCase.id}}" #type="ngModel">
                                         <option [disabled]="type.dirty" selected value="">Select Option</option>
                                         <option>Default</option>
                                         <option>Basic</option>
@@ -123,16 +123,17 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Marks</label>
-                                    <input type="text" [(ngModel)]="testCase.testCaseMarks" class="form-control width-percent-60" placeholder="0" required name="marks_{{i}}" #marks="ngModel"/>
+                                    <input type="text" [(ngModel)]="testCase.testCaseMarks" class="form-control width-percent-60" placeholder="0" required name="marks_{{testCase.id}}" #marks="ngModel" pattern="\d+\.?\d*" />
                                     <div class="errors-container">
                                         <div *ngIf="marks.errors && (marks.dirty || marks.touched)">
-                                            <p class="text-danger">Test Case Marks is required</p>
+                                            <p class="text-danger" *ngIf="marks.errors.required">Test Case Marks is required</p>
+                                            <p class="text-danger" *ngIf="marks.errors.pattern">Enter Numbers</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Input Values</label>
-                                    <textarea [(ngModel)]="testCase.testCaseInput" class="form-control width-percent-60" rows="3" required name="input_{{i}}" #input="ngModel"></textarea>
+                                    <textarea [(ngModel)]="testCase.testCaseInput" class="form-control width-percent-60" rows="3" required name="input_{{testCase.id}}" #input="ngModel"></textarea>
                                     <div class="errors-container">
                                         <div *ngIf="input.errors && (input.dirty || input.touched)">
                                             <p class="text-danger">Test Case Input is required</p>
@@ -141,7 +142,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Expected Values</label>
-                                    <textarea [(ngModel)]="testCase.testCaseOutput" class="form-control width-percent-60" rows="3" required name="output_{{i}}" #output="ngModel"></textarea>
+                                    <textarea [(ngModel)]="testCase.testCaseOutput" class="form-control width-percent-60" rows="3" required name="output_{{testCase.id}}" #output="ngModel"></textarea>
                                     <div class="errors-container">
                                         <div *ngIf="output.errors && (output.dirty || output.touched)">
                                             <p class="text-danger">Test Case Output is required</p>
