--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
@@ -14,8 +14,8 @@
                     </div>
                 </div>
                 <div class="form-group answer-choices" *ngIf="isSingleAnswerQuestion">
-                    <md-radio-group [(ngModel)]="indexOfOptionSelected" name="first" (ngModelChange)="isRadioButtonSelected=true">
-                        <md-radio-button value="{{i}}" [disabled]="choice.pristine && !isEditQuestion && !isdulicateQuestion" *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" required>
+                    <md-radio-group [(ngModel)]="indexOfOptionSelected" name="first" (ngModelChange)="indexOfOptionSelected=true">
+                        <md-radio-button value="{{i}}" [disabled]="choice.pristine && !isEditQuestion && !isdulicateQuestion" *ngFor="let option of singleMultipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i">
                             <input type="text" class="form-control" placeholder="Answer Choice {{i+1}}" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required />
                             <em class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</em>
                             <div class="errors-container">
