--- a/Trappist/index.html
+++ b/Trappist/index.html
@@ -56,10 +56,11 @@
         </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
-<div class="markdown-body entry-content" itemprop="text"><h2><a id="user-content-welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"></a>Welcome to GitHub Pages</h2>
+<div class="markdown-body entry-content" itemprop="text">
+<h2><a id="user-content-welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"></a>Welcome to GitHub Pages</h2>
 <p>You can use the <a href="https://github.com/Promact/trappist/edit/master/README.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
 <p>Whenever you commit to this repository, GitHub Pages will run <a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.</p>
-<h3><a id="user-content-markdown" class="anchor" href="#markdown" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Markdown</h3>
+<h3>Markdown</h3>
 <p>Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for</p>
 <div class="highlight highlight-source-gfm"><pre>Syntax highlighted code block
 
@@ -107,12 +108,15 @@
             </div>
         </div>
     </footer>
-</body>
+	
+	<script>
+	
+	var stickyOffset = $('#top-menu').offset().top;
 
-<script>
     $(window).scroll(function () {
         var offset = $(window).scrollTop();
-        if (offset > 100) {
+		console.log(offset);
+        if (offset >= stickyOffset + 30) {
             $('#top-menu').addClass("fixed");
         }
         else {
@@ -120,5 +124,8 @@
         }
     });
 </script>
+</body>
+
+
 </html>
 
